project (wallDrainage Fortran)
cmake_minimum_required(VERSION 2.8)
set (CMAKE_FORTRAN_FLAGS "-O3")
file (GLOB _sources *.f*)
set (CMAKE_Fortran_MODULE_DIRECTORY mod)
include_directories($ENV{HOME}/include)
find_library(FSON fson PATHS $ENV{HOME}/lib)
find_library(BSPLINE bspline PATHS $ENV{HOME}/lib)
add_executable(wallDrainage ${_sources})
target_link_libraries(wallDrainage ${FSON} ${BSPLINE})
